syntax = "proto3";

package grpc;

option go_package = "./;grpc";

import "google/protobuf/struct.proto";

service DependencyManagement {
  rpc Detect(stream DetectRequest) returns (stream DetectResponse) {}
  rpc Resolve(stream ResolveRequest) returns (stream ResolveResponse) {}
}

message DetectRequest {
  int32 process_type = 1;
  oneof data {
    string countAndChecksum = 2;
    bytes chunk_data = 3;
  };
}

message DetectResponse {
  string message = 1;
  google.protobuf.Struct metadata = 2;
}

message ResolveRequest {
  string resolve_uri = 1;
}

message ResolveResponse {
  string message = 1;
  google.protobuf.Struct metadata = 2;
}