syntax = "proto3";

package grpc;

option go_package = "./;grpc";

import "google/protobuf/struct.proto";

service Process {
  rpc Import(stream ImportRequest) returns (ImportResponse) {}
  rpc Download(DownloadRequest) returns (stream DownloadResponse) {}
}

message ImportRequest {
  bool isPackage = 1;
  string partial_uri = 2;
  oneof data {
    FileInfo file_info = 3;
    bytes chunk_data = 4;
  };
}
message ImportResponse {
  string message = 1;
  uint32 totalSize = 2;
}

message FileInfo {
  string fileName = 1;
}

message DownloadRequest {
  bool isPackage = 1;
  string targetUri = 2;
}
message DownloadResponse {
  string message = 1;
  google.protobuf.Struct metadata = 2;
}